[package]
name = "rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
tokio = "1.35.1"
